<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rápido</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_gps">Use GPS Coords</string>
    <string name="menu_location_no">Remove Location</string>

    <string name="title_activity_main">Rápido</string>
    <string name="title_activity_twitter">Twitter Auth</string>
    <string name="title_activity_foursquare">Foursquare Auth</string>
    <string name="title_activity_bitly">bit.ly Auth</string>
    <string name="title_activity_location">Select Location</string>
    <string name="title_activity_location_results">Search Results</string>
    <string name="title_activity_google_plus">Google+ Auth</string>
    <string name="title_activity_app_dot_net">app.net Auth</string>

    <string name="prefs_about_version_title">Build Version</string>
    <string name="prefs_about_rate_title">Rate</string>
    <string name="prefs_about_rate_summary">Rate and comment in the Play Store.</string>

    <string name="label_update">Update:</string>
    <string name="button_send">Send</string>
    <string name="auth_cancelled">Authorization Cancelled</string>
    <string name="twitter_auth_connected">Connected to Twitter!</string>
    <string name="twitter_auth_failed">Twitter Auth Failed. :(</string>
    <string name="update_abort">Cancelled sending updates</string>

    <string name="error_message_too_long">Message too long!</string>
    <string name="error_not_posted">Error: Message not posted.</string>
    <string name="error_no_services_selected">Error: No services selected to update.</string>
    <string name="error_no_message">Error: No message to post.</string>
    <string name="error_message_too_long_foursquare_links">Error: Foursquare does not automatically automatically shorten links, enable bit.ly to save on space.</string>

    <string name="alert_title">Updating Status</string>
    <string name="alert_posted_facebook">Posted successfully to Facebook!</string>
    <string name="alert_posted_twitter">Posted successfully to Twitter!</string>
    <string name="alert_posted_foursquare">Checked in on Foursquare</string>
    <string name="alert_posted_google_plus">Posted successfully to Google Plus!</string>
    <string name="alert_posted_app_dot_net">Posted successfully to app.net!</string>

    <string name="alert_posting_facebook">Posting to Facebook</string>
    <string name="alert_posting_twitter">Posting to Twitter</string>
    <string name="alert_posting_foursquare">Checking in on Foursquare</string>
    <string name="alert_posting_google_plus">Posting to Google Plus</string>
    <string name="alert_posting_app_dot_net">Posting to app.net</string>
    <string name="alert_fail_facebook">Facebook update failed.</string>
    <string name="alert_fail_twitter">Twitter update failed.</string>
    <string name="alert_fail_foursquare">Foursquare checkin failed.</string>
    <string name="alert_fail_google_plus">Posting to Google Plus failed.</string>
    <string name="alert_fail_app_dot_net">Posting to app.net failed.</string>
    <string name="alert_fail_retry">Tap to retry</string>
    <string name="alert_posting_shortening_bitly">Shortening with bit.ly</string>
    <string name="alert_posting_shortened_bitly">Shortened, now posting.</string>

    <string name="alert_persistent_notification_title">Rápido Quick Update</string>
    <string name="alert_persistent_notification">Update your status now!</string>

    <string name="dialog_no_internets">No internet connection detected.</string>
    <string name="dialog_loading">Loading %s Authorization</string>
    <string name="dialog_please_wait">Please wait&#8230;</string>
    <string name="dialog_updating_status">Updating status&#8230;</string>

    <string name="prefs_category_connected_title">Accounts</string>
    <string name="prefs_facebook_title">Facebook</string>
    <string name="prefs_facebook_title_connected">Connected to Facebook!</string>
    <string name="prefs_facebook_summary_on">Connected to %s</string>
    <string name="prefs_facebook_summary_off">Connect to Facebook</string>
    <string name="prefs_facebook_hashtags_title">Remove #hashtags</string>
    <string name="prefs_facebook_hashtags_summary_on">Don\'t post hashtags to Facebook.</string>
    <string name="prefs_facebook_hashtags_summary_off">Include hashtags in Facebook updates.</string>

    <string name="prefs_twitter_title">Twitter</string>
    <string name="prefs_twitter_title_connected">Connected to Twitter!</string>
    <string name="prefs_twitter_summary_on">Connected to %s</string>
    <string name="prefs_twitter_summary_off">Connect to Twitter</string>

    <string name="prefs_bitly_title">bit.ly</string>
    <string name="prefs_bitly_title_connect">Connect to Bitly</string>
    <string name="prefs_bitly_title_connected">Connected to Bitly</string>
    <string name="prefs_bitly_title_connect_summary_on">Shorten outgoing links</string>
    <string name="prefs_bitly_title_connect_summary_off">Don\'t shorten any links</string>
    <string name="prefs_bitly_title_summary">Enable shortenting of links with bit.ly</string>
    <string name="prefs_bitly_title_shorten_facebook">Shorten Facebook Links?</string>
    <string name="prefs_bitly_title_shorten_twitter">Shorten Twitter Links?</string>
    <string name="prefs_bitly_title_shorten_domain">Choose Short Url Domain</string>
    <string name="prefs_bitly_title_shorten_domain_summary">Use bit.ly, j.mp or bitly.com to shorten links</string>

    <string name="prefs_category_application_settings">Application Settings</string>
    <string name="prefs_sendOnEnter_title">Send on Enter?</string>
    <string name="prefs_sendOnEnter_summary_on">Send the message upon pressing enter.</string>
    <string name="prefs_clear_accounts_title">Clear Account Settings</string>
    <string name="prefs_category_misc_title">Misc</string>
    <string name="prefs_misc_black_title">Use Black theme</string>
    <string name="prefs_category_title_about">About</string>
    <string name="prefs_category_title_experimental">Experimental</string>
    <string name="prefs_category_title_premium">Premium</string>

    <string name="prefs_persistent_notification_title">Show Persistent Notification</string>
    <string name="prefs_persistent_notification_summary_off"></string>
    <string name="prefs_persistent_notification_summary_on">Rápido will appear in your notification area</string>
    <string name="prefs_persistent_notification_expanded_checkin">Check-In</string>
    <string name="prefs_persistent_notification_expanded_update_status">Post</string>

    <!-- Foursquare user info -->
    <string name="prefs_foursquare_title">Foursquare</string>
    <string name="prefs_foursquare_title_connected">Connected to Foursquare!</string>
    <string name="prefs_foursquare_summary_on">Connected to %s</string>
    <string name="prefs_foursquare_summary_off">Connect to Foursquare</string>

    <!-- Google Plus user info -->
    <string name="prefs_google_plus_title">Google Plus</string>
    <string name="prefs_google_plus_title_connected">Connected to Google Plus!</string>
    <string name="prefs_google_plus_summary_on">Connected to %s</string>
    <string name="prefs_google_plus_summary_off">Connect to Google Plus</string>

    <!-- App.net user info -->
    <string name="prefs_app_dot_net_title">app.net</string>
    <string name="prefs_app_dot_net_title_connected">Connected to app.net!</string>
    <string name="prefs_app_dot_net_summary_on">Connected to %s</string>
    <string name="prefs_app_dot_net_summary_off">Connect to app.net</string>

    <string name="foursquare_powered">Powered by Foursquare</string>
    <string name="location_load">Loading locations&#8230;</string>
    <string name="location_wait">Waiting for GPS location, please hold.</string>
    <string name="location_none">No locations found near your location.</string>
    <string name="location_search_title">Search for a location</string>
    <string name="location_search_hint">Mos Eisley Cantina</string>
    <string name="location_icon">Location icon</string>
    <string name="location_select">Select a location</string>
    <string name="location_use_gps">My GPS Location</string>
    <string name="location_remove">Removed location information</string>
    <string name="location_add">Add Location</string>
    <string name="location_add_summary">Select a venue or use GPS coords</string>
</resources>