<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/prefs_category_connected_title">
		<!-- <CheckBoxPreference
		    android:title="@string/prefs_app_dot_net_title"
		    android:key="@string/prefs_app_dot_net_connected"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_app_dot_net_title_connected"
		    android:summaryOff="@string/prefs_app_dot_net_summary_off"
		    android:icon="@drawable/appnet_icon" /> -->

		<CheckBoxPreference
		    android:title="@string/prefs_facebook_title"
		    android:key="@string/prefs_facebook_connected"
		    android:defaultValue="false"
		    android:disableDependentsState="false"
		    android:summaryOn="@string/prefs_facebook_title_connected"
		    android:summaryOff="@string/prefs_facebook_summary_off"
		    android:icon="@drawable/facebook_icon" />

		<CheckBoxPreference
		    android:dependency="@string/prefs_facebook_connected"
		    android:title="@string/prefs_facebook_hashtags_title"
		    android:key="@string/prefs_facebook_hashtags"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_facebook_hashtags_summary_on"
		    android:summaryOff="@string/prefs_facebook_hashtags_summary_off"
		    android:icon="@drawable/hashtag"
		    android:shouldDisableView="true" />

		<CheckBoxPreference
		    android:title="@string/prefs_foursquare_title"
		    android:key="@string/prefs_foursquare_connected"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_foursquare_title_connected"
		    android:summaryOff="@string/prefs_foursquare_summary_off"
		    android:icon="@drawable/foursquare_icon" />

		<CheckBoxPreference
		    android:title="@string/prefs_google_plus_title"
		    android:key="@string/prefs_google_plus_connected"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_google_plus_title_connected"
		    android:summaryOff="@string/prefs_google_plus_summary_off"
		    android:icon="@drawable/google_plus_icon" />

		<CheckBoxPreference
		    android:title="@string/prefs_twitter_title"
		    android:key="@string/prefs_twitter_connected"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_twitter_title_connected"
		    android:summaryOff="@string/prefs_twitter_summary_off"
		    android:icon="@drawable/twitter_icon" />

<!-- 	    <PreferenceCategory
		    android:title="@string/prefs_bitly_title"
		    android:summary="@string/prefs_bitly_title_summary"> -->
			<CheckBoxPreference
			    android:title="@string/prefs_bitly_title"
			    android:key="@string/prefs_bitly_connected"
			    android:defaultValue="false"
		    	android:summaryOn="@string/prefs_bitly_title_connect_summary_on"
		    	android:summaryOff="@string/prefs_bitly_title_connect"
		    	android:icon="@drawable/bitly_fugu" />
<!-- 			<ListPreference
			    android:title="@string/prefs_bitly_title_shorten_domain"
			    android:key="@string/prefs_bitly_shorten_domain"
			    android:defaultValue="@string/prefs_bitly_title_shorten_domain_bitly"
			    android:entries="@array/prefs_bitly_title_shorten_domain_entries"
			    android:dialogTitle="@string/prefs_bitly_title_shorten_domain"
			    android:entryValues="@array/prefs_bitly_title_shorten_domain_entryValues" />
			<CheckBoxPreference
			    android:title="@string/prefs_bitly_title_shorten_facebook"
			    android:key="@string/prefs_bitly_shorten_facebook"
			    android:defaultValue="true"/>
			<CheckBoxPreference
			    android:title="@string/prefs_bitly_title_shorten_twitter"
			    android:key="@string/prefs_bitly_shorten_twitter"
			    android:defaultValue="true"/> -->
		<!-- </PreferenceCategory> -->

	    <Preference
			android:title="@string/prefs_clear_accounts_title"
			android:key="@string/prefs_clear_accounts"
			android:enabled="true"
			android:summary="Use this to fix account issues."
			android:icon="@drawable/trash_can_gray" />
	</PreferenceCategory>

	<PreferenceCategory
        android:title="@string/prefs_category_misc_title" >
	    <CheckBoxPreference
		    android:title="@string/prefs_persistent_notification_title"
		    android:key="@string/prefs_persistent_notification_enabled"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_persistent_notification_summary_on"
		    android:summaryOff="@string/prefs_persistent_notification_summary_off" />

<!--         <CheckBoxPreference
            android:title="@string/prefs_misc_black_title"
            android:key="@string/prefs_misc_black"
            android:defaultValue="false" /> -->
    </PreferenceCategory>

<!-- 	<PreferenceCategory
        android:title="@string/prefs_category_title_premium"
        android:enabled="true">
        <CheckBoxPreference
		    android:title="@string/prefs_app_dot_net_title"
		    android:key="@string/prefs_app_dot_net_connected"
		    android:defaultValue="false"
		    android:summaryOn="@string/prefs_app_dot_net_title_connected"
		    android:summaryOff="@string/prefs_app_dot_net_summary_off"
		    android:icon="@drawable/appnet_icon" />
    </PreferenceCategory> -->

    <PreferenceCategory
	    android:title="@string/prefs_category_title_about">
	    <Preference
	        android:title="@string/prefs_about_version_title"
	        android:summary="@string/app_version_number" />
	    <Preference
	        android:title="@string/prefs_about_rate_title"
	        android:key="@string/prefs_about_rate"
	        android:summary="@string/prefs_about_rate_summary" />
	</PreferenceCategory>
</PreferenceScreen>

<!--
	<PreferenceCategory
	    android:title="@string/prefs_category_application_settings">
		<CheckBoxPreference
		    android:title="@string/prefs_sendOnEnter_title"
		    android:key="@string/prefs_sendOnEnter_enabled"
		    android:summaryOn="@string/prefs_sendOnEnter_summary_on"
		    android:summaryOff=""/>
	</PreferenceCategory>
-->