<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rapido="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/action_location_remove"
	    android:title="@string/menu_location_no"
	    android:orderInCategory="99"
	    rapido:showAsAction="always" />
	<item android:id="@+id/action_location_gps"
	    android:title="@string/menu_gps"
	    android:orderInCategory="100"
	    rapido:showAsAction="always" />
	<!-- android:icon="@drawable/ic_action_gps" -->
<!-- 	<item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:orderInCategory="101"
        android:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_action_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView" /> -->
    <item android:id="@+id/action_location_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="102"
        rapido:showAsAction="always"
        android:icon="@drawable/ic_action_refresh" />
</menu>
