<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="2dp"
    android:background="@color/white">
	<EditText android:id="@+id/EditTextUpdate"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_margin="2dp"
        android:layout_marginTop="5dp"
	    android:maxLines="4"
	    android:minLines="2"
	    android:text=""
	    android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
	    android:gravity="top">
	    <requestFocus />
    </EditText>

	<LinearLayout
	    android:id="@+id/LinearLayoutSwitches"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/EditTextUpdate"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal"
	    android:paddingBottom="5dp"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp"
	    android:paddingTop="5dp"
	    android:baselineAligned="false" >
		<RelativeLayout android:id="@+id/RelativeLayoutTwitterWrapper"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ToggleButton android:id="@+id/ToggleButtonTwitter"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:layout_gravity="center"
	            android:background="@drawable/toggle_twitter_selector"
	            android:textOff=""
	        	android:textOn=""
	            android:text="" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/RelativeLayoutFacebookWrapper"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ToggleButton android:id="@+id/ToggleButtonFacebook"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:background="@drawable/toggle_facebook_selector"
	            android:textOff=""
	        	android:textOn=""
	            android:text="" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/RelativeLayoutGooglePlusWrapper"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1">
			<ToggleButton android:id="@+id/ToggleButtonGooglePlus"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:background="@drawable/toggle_google_plus_selector"
	            android:textOff=""
	        	android:textOn=""
	            android:text="" />
		</RelativeLayout>
		<RelativeLayout android:id="@+id/RelativeLayoutAppNetWrapper"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ToggleButton android:id="@+id/ToggleButtonAppNet"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:layout_gravity="center"
	            android:background="@drawable/toggle_app_net_selector"
	            android:textOff=""
	        	android:textOn=""
	            android:text="" />
        </RelativeLayout>
		<RelativeLayout android:id="@+id/RelativeLayoutFoursquareWrapper"
		    android:layout_width="0dp"
		    android:layout_height="45dp"
	        android:gravity="center"
	        android:layout_weight="1">
	        <ToggleButton android:id="@+id/ToggleButtonFoursquare"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:background="@drawable/toggle_foursquare_selector"
	            android:textOff=""
	        	android:textOn=""
	            android:text="" />
        </RelativeLayout>
	</LinearLayout>

			<!-- <Button
		    android:id="@+id/ButtonSend"
		    android:layout_width="match_parent"
		    android:layout_height="45dp"
		    android:layout_gravity="right"
		    android:text="@string/button_send"
		    android:visibility="gone" /> -->

	<RelativeLayout
	    android:id="@+id/relativeLayoutLocationWrapper"
  	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
        android:layout_below="@id/LinearLayoutSwitches"
        android:clickable="true"
        android:background="@drawable/layout_selector" >
	    <ImageView
		    android:id="@+id/imageViewLocationIcon"
		    android:layout_width="45dp"
		    android:layout_height="45dp"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="6dp"
		    android:layout_marginTop="2.5dp"
		    android:src="@drawable/location_icon_gray"
		    android:contentDescription="@string/location_icon" />
		<LinearLayout
	        android:id="@+id/linearLayoutLocationNameWrapper"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/imageViewLocationIcon"
     	    android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:orientation="vertical"
	        android:gravity="center" >
			<TextView
			    android:id="@+id/textViewLocationName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/location_add"
				android:singleLine="true"
				android:ellipsize="end" />
			<TextView
			    android:id="@+id/textViewLocationDetails"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="1dp"
				android:text="@string/location_add_summary"
				android:textSize="12sp"
				android:singleLine="true"
				android:ellipsize="end" />
		</LinearLayout>
	</RelativeLayout>

    <com.facebook.widget.LoginButton
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:layout_below="@id/relativeLayoutLocationWrapper"
            android:visibility="gone" />

	<LinearLayout
        android:id="@+id/linearLayoutAdWrapper"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_below="@id/relativeLayoutLocationWrapper"
        android:layout_alignParentBottom="true" >

		<com.google.android.gms.ads.AdView
  		    xmlns:ads="http://schemas.android.com/apk/res-auto"
  		    android:id="@+id/adView"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    ads:adSize="BANNER"
  		    ads:adUnitId="@string/admob_id"
  		    android:gravity="center_horizontal" />

	</LinearLayout>

	<TextView
	    android:id="@+id/TextViewCount"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:gravity="right|top"
	    android:layout_marginRight="2dp"
	    android:textIsSelectable="false"
	    android:textSize="8sp" />

</RelativeLayout>